# obsidian

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.opencode/plans/: improve_chat_ui_and_suppress_warnings.md
config/: connect.json  paths.config
config/templates/: header.yaml  memory.md  voice.md
docs/: IMPLEMENTATION.md  configuration.md  usage.md
obsidian/: config.py  convert.py  convert_to_md.py  ingest.py  server.py  utils.py
src/obsidian/: chat.py  cli.py  config.py  convert_to_md.py  core.py  extract.py  import_doc.py  ingest.py  server.py  utils.py
templates/: header.yaml
tests/: test_chat.py  test_cli.py  test_config.py  test_core.py  test_extract.py  test_import_doc.py  test_ingest.py  test_integration.py  test_server.py  test_utils.py
